# gooroom-applauncher-plugin

./: Makefile.am  README  configure.ac.in
debian/: changelog  control  copyright  files  rules
icons/: Makefile.am
icons/32x32/apps/: Makefile.am
icons/scalable/apps/: Makefile.am
panel-plugin/: Makefile.am  appfinder-model.c  appfinder-model.h  appfinder-private.h  appitem.ui  applauncher-appitem.c  applauncher-appitem.h  applauncher-indicator.c  applauncher-indicator.h  applauncher-plugin.c  applauncher-plugin.desktop.in.in  applauncher-plugin.h  applauncher-window.c  applauncher-window.h  apps.gooroom-applauncher-plugin.gschema.xml  gresource.xml  indicator.ui  window.ui  xfce-spawn.c  xfce-spawn.h
po/: POTFILES.in  POTFILES.skip  en_US.po  ko.po
theme/: Makefile.am  gooroom-applauncher.css
